invalid number error mess update

--- a/themes/custom-theme/login/messages/messages_en.properties
+++ b/themes/custom-theme/login/messages/messages_en.properties
@@ -3,4 +3,4 @@ missingCity=Please specify city.
 missingCountry=Please specify country.
 missingStreet=Please specify street.
 missingPostalCode=Please specify postal code.
-invalidMobileFormat=Mobile format is invalid.
+invalidMobileFormat=Mobile number format is invalid. Example correct: +48123000123
